# django-shipping

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
demo/: app.py  dev.db  events.py  main.py  projects.py  store.py
demo/demo/: actions.py  admin.py  models.py  settings.py  urls.py  views.py
demo/public/js/: main.coffee
demo/templates/context/: interface.html
shipping/: __init__.py  admin.py  apps.py  codes.py  core.py  correios.py  email.py  fretefacil.py  hooks.py  models.py  services.py  strings.py  tests.py  tracking.py  urls.py  views.py
shipping/migrations/: 0001_initial.py  0002_auto_20200508_2236.py  0003_amount_category_cart_order_product_orderitem_and_more.py
shipping/providers/: __init__.py  cep.py  correios.py  default.py  fretefacil.py  tracking.py
tests/: settings.py
